2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.cc (CounterBox): Improve size calculation of the
	counter labels -- it no longer depends on '9' being the widest digit.

	* src/statusline.{cc,h} src/mainwindow.cc: Show the encoding of the
	currently displayed file in the statusbar.

2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h}: Collect file access errors during execution
	of find_files() and, when finished, return the list of errors via
	an exception to the caller.

	* src/mainwindow.cc (on_find_files): Show an error message dialog
	if the search pattern is invalid or if errors occurred during file
	search.

2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_exec_search): I changed my mind, there is
	absolutely no need to show off Util::next() here :)

2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.h: Introduce next() and prev() templates,
	shamelessly stolen from boost.

	* src/mainwindow.cc (on_exec_search): Use Util::next().

2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_exec_search): If there was an error in
	the regex, move the Gtk::Entry cursor to the character reported
	by Pcre::Error::offset().

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (int_to_string): New function.

	* src/mainwindow.cc (on_exec_search): Show an error dialog if
	there is an error in the regex.

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_select_folder): Hide the file selection
	pane in the Gtk::FileSelection dialog, since we only need the
	directory part.

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} src/prefdialog.cc: Get rid of
	ascii_toupper() and AsciiToupper because I just added the
	formerly missing Glib::Ascii::toupper() to glibmm :-P

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>
